--- a/templates/sensors.html
+++ b/templates/sensors.html
@@ -21,96 +21,96 @@
     <header>
 
         <div class="container">
-    
-          <nav class="navbar">
-    
-                    <a href="#">
-                        <img src="/static/images/rakshanetra.png" alt="DPPS logo" width="150" class="logo-light">
-                        <img src="/static/images/rakshanetra.png" alt="DPPS logo" width="150" class="logo-dark">
-                    </a>
-                
-                    <div class="btn-group">
-                
-                        <button class="theme-btn theme-btn-mobile light">
-                            <ion-icon name="moon" class="moon"></ion-icon>
-                            <ion-icon name="sunny" class="sun"></ion-icon>
-                        </button>
-                
-                        <button class="nav-menu-btn">
-                            <ion-icon name="menu-outline"></ion-icon>
-                        </button>
-                
-                    </div>
-                
-                    <div class="flex-wrapper">
-                
-                        <ul class="desktop-nav">
-                
-                            <li>
+
+            <nav class="navbar">
+
+                <a href="#">
+                    <img src="/static/images/rakshanetra.png" alt="DPPS logo" width="150" class="logo-light">
+                    <img src="/static/images/rakshanetra.png" alt="DPPS logo" width="150" class="logo-dark">
+                </a>
+
+                <div class="btn-group">
+
+                    <button class="theme-btn theme-btn-mobile light">
+                        <ion-icon name="moon" class="moon"></ion-icon>
+                        <ion-icon name="sunny" class="sun"></ion-icon>
+                    </button>
+
+                    <button class="nav-menu-btn">
+                        <ion-icon name="menu-outline"></ion-icon>
+                    </button>
+
+                </div>
+
+                <div class="flex-wrapper">
+
+                    <ul class="desktop-nav">
+
+                        <li>
+                            <a href="/" class="nav-link">Home</a>
+                        </li>
+
+                        <li>
+                            <a href="/input_fields" class="nav-link">Temperature</a>
+                        </li>
+
+                        <li>
+                            <a href="/sensors" class="nav-link">Sensor</a>
+                        </li>
+
+                        <li>
+                            <a href="#yourSensors" class="nav-link">Your Sensor</a>
+                        </li>
+
+                        {% if person.is_logged_in %}
+                        <li style="float:right;"><a href="{{ url_for('logout') }}">Logout, {{ person.name }}</a></li>
+                        {% endif %}
+
+                    </ul>
+
+                    <button class="theme-btn theme-btn-desktop light">
+                        <ion-icon name="moon" class="moon"></ion-icon>
+                        <ion-icon name="sunny" class="sun"></ion-icon>
+                    </button>
+
+                </div>
+
+                <div class="mobile-nav">
+
+                    <button class="nav-close-btn">
+                        <ion-icon name="close-outline"></ion-icon>
+                    </button>
+
+                    <div class="wrapper">
+
+                        <p class="h3 nav-title">Main Menu</p>
+
+                        <ul>
+                            <li class="nav-item">
                                 <a href="/" class="nav-link">Home</a>
                             </li>
-                
-                            <li>
+
+                            <li class="nav-item">
                                 <a href="/input_fields" class="nav-link">Temperature</a>
                             </li>
-                
-                            <li>
-                                <a href="/sensors" class="nav-link">Sensor</a>
+
+                            <li class="nav-item">
+                                <a href="/sensors" class="nav-link">Sensors</a>
                             </li>
-                
-                            <li>
-                                <a href="#yourSensors" class="nav-link">Your Sensor</a>
+
+                            <li class="nav-item">
+                                <a href="#yourSensors" class="nav-link">Your Sensors</a>
                             </li>
-                            
+
                             {% if person.is_logged_in %}
-                            <li style="float:right;"><a href="{{ url_for('logout') }}">Logout, {{ person.name }}</a></li>
+                            <li><a href="{{ url_for('logout') }}">Logout, {{ person.name }}</a></li>
                             {% endif %}
-                
+
                         </ul>
-                
-                        <button class="theme-btn theme-btn-desktop light">
-                            <ion-icon name="moon" class="moon"></ion-icon>
-                            <ion-icon name="sunny" class="sun"></ion-icon>
-                        </button>
-                
+
                     </div>
-                
-                    <div class="mobile-nav">
-                
-                        <button class="nav-close-btn">
-                            <ion-icon name="close-outline"></ion-icon>
-                        </button>
-                
-                        <div class="wrapper">
-                
-                            <p class="h3 nav-title">Main Menu</p>
-                
-                            <ul>
-                                <li class="nav-item">
-                                    <a href="/" class="nav-link">Home</a>
-                                </li>
-                
-                                <li class="nav-item">
-                                    <a href="/input_fields" class="nav-link">Temperature</a>
-                                </li>
-                
-                                <li class="nav-item">
-                                    <a href="/sensors" class="nav-link">Sensors</a>
-                                </li>
-                
-                                <li class="nav-item">
-                                    <a href="#yourSensors" class="nav-link">Your Sensors</a>
-                                </li>
-                
-                                {% if person.is_logged_in %}
-                                <li><a href="{{ url_for('logout') }}">Logout, {{ person.name }}</a></li>
-                                {% endif %}
-                
-                            </ul>
-                
-                        </div>
-                
-                        <!-- <div>
+
+                    <!-- <div>
                 
                             <p class="h3 nav-title">Topics</p>
                 
@@ -129,36 +129,37 @@
                             </ul>
                 
                         </div> -->
-                
-                    </div>
-                
-                </nav>
-    
+
+                </div>
+
+            </nav>
+
         </div>
-    
-      </header>
-    
+
+    </header>
+
     <div class="main">
         <div class="container">
             <h2 class="h2">List of Sensors</h2>
             <div class="blog">
-                <button class="blog-topic text-large" href="/dht_sensor" class="sensor-link">DHT</button>
-                <button class="blog-topic text-large" href="/mpu_sensor" class="sensor-link">MPU</button>
-            
+                <button class="blog-topic text-large" onclick="window.location.href='/dht_sensor'">DHT</button>
+                <button class="blog-topic text-large" onclick="window.location.href='/mpu_sensor'">MPU</button>
+
+
                 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
                 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
                 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
                 <script>
                     // Use JavaScript to dynamically load content when a link is clicked
-                    document.addEventListener("DOMContentLoaded", function() {
-                        document.querySelectorAll("a").forEach(function(link) {
-                            link.addEventListener("click", function(event) {
+                    document.addEventListener("DOMContentLoaded", function () {
+                        document.querySelectorAll("a").forEach(function (link) {
+                            link.addEventListener("click", function (event) {
                                 event.preventDefault();
                                 var url = this.getAttribute("href");
                                 loadContent(url);
                             });
                         });
-            
+
                         // Function to load content dynamically
                         function loadContent(url) {
                             fetch(url)
@@ -180,77 +181,79 @@
     <footer>
 
         <div class="container">
-    
-          <div class="wrapper">
-    
-            <a href="#" class="footer-logo">
-              <img src="/static/images/rakshanetra.png" alt="SimpleBlog Logo"  width="150" class="logo-light">
-              <img src="/static/images/rakshanetra.png" alt="SimpleBlog Logo" width="150" class="logo-dark">
-            </a>
-    
-            <p class="footer-text">
-                "Discover the pillars of our disaster management system: Embrace the fusion of Web accessibility, optimum Web performance, and seamless Database management, integrated with cutting-edge IoT sensors for enhanced real-time monitoring."
-            </p>
-    
-          </div>
-    
-          <div class="wrapper">
-    
-            <p class="footer-title">Quick Links</p>
-    
-            <ul>
-    
-              <li>
-                <a href="#" class="footer-link">Advertise with us</a>
-              </li>
-    
-              <li>
-                <a href="#" class="footer-link">About Us</a>
-              </li>
-    
-              <li>
-                <a href="#" class="footer-link">Contact Us</a>
-              </li>
-    
-            </ul>
-    
-          </div>
-    
-          <div class="wrapper">
-    
-            <p class="footer-title">Legal Stuff</p>
-    
-            <ul>
-    
-              <li>
-                <a href="#" class="footer-link">Privacy Notice</a>
-              </li>
-    
-              <li>
-                <a href="#" class="footer-link">Cookie Policy</a>
-              </li>
-    
-              <li>
-                <a href="#" class="footer-link">Terms Of Use</a>
-              </li>
-    
-            </ul>
-    
-          </div>
-    
+
+            <div class="wrapper">
+
+                <!-- <a href="#" class="footer-logo">
+                    <img src="/static/images/rakshanetra.png" alt="SimpleBlog Logo" width="150" class="logo-light">
+                    <img src="/static/images/rakshanetra.png" alt="SimpleBlog Logo" width="150" class="logo-dark">
+                </a> -->
+
+                <p class="footer-text">
+                    "Discover the pillars of our disaster management system: Embrace the fusion of Web accessibility,
+                    optimum Web performance, and seamless Database management, integrated with cutting-edge IoT sensors
+                    for enhanced real-time monitoring."
+                </p>
+
+            </div>
+
+            <div class="wrapper">
+
+                <p class="footer-title">Quick Links</p>
+
+                <ul>
+
+                    <li>
+                        <a href="#" class="footer-link">Advertise with us</a>
+                    </li>
+
+                    <li>
+                        <a href="#" class="footer-link">About Us</a>
+                    </li>
+
+                    <li>
+                        <a href="#" class="footer-link">Contact Us</a>
+                    </li>
+
+                </ul>
+
+            </div>
+
+            <div class="wrapper">
+
+                <p class="footer-title">Legal Stuff</p>
+
+                <ul>
+
+                    <li>
+                        <a href="#" class="footer-link">Privacy Notice</a>
+                    </li>
+
+                    <li>
+                        <a href="#" class="footer-link">Cookie Policy</a>
+                    </li>
+
+                    <li>
+                        <a href="#" class="footer-link">Terms Of Use</a>
+                    </li>
+
+                </ul>
+
+            </div>
+
         </div>
-    
+
         <p class="copyright">
-          &copy; Copyright 2024 <a href="#">RakshaNetra</a>
+            &copy; Copyright 2024 <a href="#">RakshaNetra</a>
         </p>
-    
-      </footer>
+
+    </footer>
 
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
